test/compile_errors/stage1/obj/unknown_length_pointer_to_opaque.zig
export const T = [*]opaque {};

// unknown length pointer to opaque
//
// tmp.zig:1:21: error: unknown-length pointer to opaque
